--- a/autoimageslider/build.gradle
+++ b/autoimageslider/build.gradle
@@ -1,73 +1,60 @@
-apply plugin: 'com.android.library'
-
-
-ext {
-
-    bintrayRepo = 'android'
-    bintrayName = 'androidautoimageslider'
-
-    publishedGroupId = 'com.github.smarteist'
-    libraryName = 'autoimageslider'
-    artifact = 'autoimageslider'
-
-    libraryDescription = 'Simple, android image slider'
-
-    siteUrl = 'https://github.com/smarteist'
-    gitUrl = 'https://github.com/smarteist/android-image-slider.git'
-
-    libraryVersion = '1.4.0'
-    organization = 'smarteistbintray' // if you push to organization's repository.
-    developerId = 'smarteist'
-    developerName = 'Ali Hosseini'
-    developerEmail = 'ali.hosseini.sr@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-
+plugins {
+    id 'com.android.library'
+    id 'maven-publish'
 }
 
 android {
-    compileSdkVersion 29
+    namespace "com.smarteist.autoimageslider"
+    compileSdkVersion 34
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 29
-        versionCode 5
-        versionName "1.3.9"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        minSdkVersion 16
+        targetSdkVersion 34
+        versionCode 6
+        versionName "1.4.1"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
-}
-
-// Add a new configuration to hold your dependencies
-configurations {
-    libConfig
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+        }
+    }
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    //noinspection GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 }
 
-task copyLibs(type: Copy) {
-    from configurations.libConfig
-    into 'libs'
-}
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                groupId = "com.github.Shivgupta1031"   // your GitHub username
+                artifactId = "Android-Image-Slider"   // you can rename if you want
+                version = "1.4.1"
 
-apply from: 'https://raw.githubusercontent.com/smarteist/bintrayUpload/master/install.gradle'
-apply from: 'https://raw.githubusercontent.com/smarteist/bintrayUpload/master/bintray.gradle'
+                from components.release
+
+                pom {
+                    name = "Android Image Slider"
+                    description = "Simple Android Auto Image Slider (Forked & Updated)"
+                    url = "https://github.com/Shivgupta1031/Android-Image-Slider"
+                    licenses {
+                        license {
+                            name = "Apache License Version 2.0"
+                            url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
