Upgrade to Gradle 7.6.2, JDK 11; remove jcenter/bintray; add JitPack publishing

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,18 @@
 pluginManagement {
     repositories {
+        gradlePluginPortal()
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven { url "https://jitpack.io" }
     }
 }
 dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven { url "https://jitpack.io" }
     }
 }
-
-include ':app', ':autoimageslider'
+rootProject.name = "Android-Image-Slider"
+include(":app", ":autoimageslider")
