--- a/autoimageslider/build.gradle
+++ b/autoimageslider/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.android.library'
-    id 'maven-publish'
+    id "com.android.library"
+    id "maven-publish"
 }
 
 android {
@@ -10,9 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 34
-        versionCode 6
-        versionName "1.4.1"
         consumerProguardFiles "consumer-rules.pro"
+        // keep or set versionCode/versionName if you need them
     }
 
     buildTypes {
@@ -27,31 +26,42 @@ android {
             withSourcesJar()
         }
     }
+
+    // (Optional) if you see Java toolchain warnings:
+    // compileOptions {
+    //     sourceCompatibility JavaVersion.VERSION_1_8
+    //     targetCompatibility JavaVersion.VERSION_1_8
+    // }
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation "androidx.appcompat:appcompat:1.6.1"
 }
 
 afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
-                groupId = "com.github.Shivgupta1031"   // your GitHub username
-                artifactId = "Android-Image-Slider"   // you can rename if you want
-                version = "1.4.1"
+                groupId = "com.github.Shivgupta1031"
+                artifactId = "Android-Image-Slider"   // or "autoimageslider"
+                version = "1.4.2"
 
                 from components.release
 
                 pom {
-                    name = "Android Image Slider"
-                    description = "Simple Android Auto Image Slider (Forked & Updated)"
+                    name = "Android Image Slider (Fork)"
+                    description = "Simple Android image slider (forked and updated)"
                     url = "https://github.com/Shivgupta1031/Android-Image-Slider"
                     licenses {
                         license {
-                            name = "Apache License Version 2.0"
+                            name = "Apache-2.0"
                             url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
                         }
+                    }
+                    scm {
+                        url = "https://github.com/Shivgupta1031/Android-Image-Slider"
+                        connection = "scm:git:git://github.com/Shivgupta1031/Android-Image-Slider.git"
+                        developerConnection = "scm:git:ssh://github.com/Shivgupta1031/Android-Image-Slider.git"
                     }
                 }
             }
