--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-
 buildscript {
-
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
+        // AGP 7.4.2 needs Gradle 7.5+  (we set 7.6.2 in wrapper)
         classpath "com.android.tools.build:gradle:7.4.2"
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // ❌ REMOVE Bintray/JCenter era plugins
+        // classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        // classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register("clean", Delete) {
+    delete(rootProject.buildDir)
 }
