--- a/autoimageslider/build.gradle
+++ b/autoimageslider/build.gradle
@@ -1,15 +1,16 @@
 plugins {
     id "com.android.library"
+    id 'org.jetbrains.kotlin.android'
     id "maven-publish"
 }
 
 android {
     namespace "com.smarteist.autoimageslider"
-    compileSdkVersion 34
+    compileSdkVersion 35
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 34
+        minSdkVersion 21
+        targetSdkVersion 35
         consumerProguardFiles "consumer-rules.pro"
         // keep or set versionCode/versionName if you need them
     }
@@ -35,7 +36,7 @@ android {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation "androidx.appcompat:appcompat:1.7.1"
 }
 
 afterEvaluate {
