--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,18 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file
 buildscript {
+    ext.kotlin_version = "1.8.22"
+
     repositories {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        // AGP 7.4.2 needs Gradle 7.5+  (we set 7.6.2 in wrapper)
-        classpath "com.android.tools.build:gradle:7.4.2"
-
-        // ❌ REMOVE Bintray/JCenter era plugins
-        // classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        // classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url "https://jitpack.io" }
+        classpath "com.android.tools.build:gradle:8.13.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 tasks.register("clean", Delete) {
-    delete(rootProject.buildDir)
+    delete rootProject.buildDir
 }
